<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_mps_layer_plugin</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hendrik.nessau@alumni.fh-aachen.de">hendrik</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <costmap_2d plugin="${prefix}/nav2_mps_layer_plugin.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
